# PhyloNetwork

./: .gitignore  .project  .pydevproject  .readthedocs.yaml  MANIFEST.in  README  README.md  environment.yml  readthedocs.yml  setup.cfg  setup.py  setup.py~
PhyloNetwork.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
doc/: Makefile  conf.py  index.rst  index.rst~
doc/_build/doctrees/: environment.pickle  index.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/_build/html/_modules/: PhyloNetwork.html  index.html
doc/_build/html/_modules/PhyloNetwork/: classes.html  distances.html
doc/_build/html/_modules/phylonetwork/: classes.html  distances.html  generators.html
doc/_build/html/_modules/pyphylonetwork/: classes.html  distances.html  (+1 more)
doc/_build/html/_sources/: index.txt
docs/: conf.py  demo.ipynb  index.rst  modules.rst  phylonetwork.rst
phylonetwork/: __init__.py  _version.py  balances.py  btctc_generators.py  classes.py  distances.py  eNewick.py  exceptions.py  generators.py  memoize.py  permutations.py  tests.py  tree_generators.py  tree_operations.py  tree_shapes.py  utils.py
src/PhyloNetwork/: __init__.py  classes.py  distances.py  eNewick.py  exceptions.py  generators.py  memoize.py  operations.py  permutations.py  utils.py
src/phylonetwork/: __init__.py  classes.py  distances.py  eNewick.py  generators.py  memoize.py  permutations.py  utils.py
src/pyphylonetwork/: __init__.py  classes.py  distances.py  generators.py  operations.py
tests/: test1.py
